--- a/src/components/DropDownMenu.css
+++ b/src/components/DropDownMenu.css
@@ -6,30 +6,13 @@
   float: right;
 }
 
-#contactAid {
-  position: fixed;
-  right: 10px;
-  bottom: 10px;
-  padding: 0 20px;
-  width: 170px;
-  height: 52px;
-}
-
-#contactAid-label {
-  position: fixed;
-  right: 10px;
-  bottom: 64px;
-  padding: 6px 20px;
-  width: 170px;
-}
-
-.contact-menu {
+.menu {
   position: absolute;
   z-index: 9;
   /*color: var(--fg);*/
   width: 193px;
-  right: 21px;
-  bottom: 57px;
+  left: 21px;
+  top: 57px;
   display: none;
   /*  background-color:  var(--bg);
     border: solid 1px var(--ll);*/
@@ -38,13 +21,13 @@
     list-style:none;*/
 }
 
-.contact-menu-selected {
+.menu-selected {
   outline: var(--fg) dotted thin;
 }
 
-#contact-menu {
+#menu {
   position: absolute;
-  bottom: calc(100%);
+  top: calc(100%);
   cursor: pointer;
   z-index: 9;
   color: var(--fg);
@@ -57,20 +40,20 @@
   list-style: none;
 }
 
-.contact-menu-open {
+.menu-open {
   display: block;
 }
 
-.contact-menu::-webkit-scrollbar-track {
+.menu::-webkit-scrollbar-track {
   background-color: var(--bg);
 }
 
-.contact-menu::-webkit-scrollbar {
+.menu::-webkit-scrollbar {
   width: 12px;
   background-color: var(--fg);
 }
 
-.contact-menu::-webkit-scrollbar-thumb {
+.menu::-webkit-scrollbar-thumb {
   background-color: var(--fg);
 }
 
