--- a/src/components/TopBar.css
+++ b/src/components/TopBar.css
@@ -3,10 +3,7 @@
   font-size: 20px;
   font-weight: 500;
   padding-top: 7px;
-  margin-left: 20px;
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0 0 0 20px;
 }
 
 #view {
@@ -37,7 +34,7 @@
   color: var(--fg);
   text-transform: uppercase;
   width: 100%;
-  left: 0px;
+  left: 0;
   border-bottom: solid 1px var(--ll);
 }
 
